# FRTSearch

./: .gitignore  FRTSearch.py  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt  train.py
.github/workflows/: publish.yml
CRAFTS_FRT_Dataset/train/: train.json
CRAFTS_FRT_Dataset/val/: val.json
configs/: detector_FAST.py  detector_FAST_19beams.py  detector_GBT.py  detector_Parkes.py  detector_SKA.py
frtsearch/: __init__.py  _core.py  cli.py
models/: mask-rcnn_hrnetv2p-w32-2x_FAST.py
test_sample/: README.md  test_impic.py  test_samples.ipynb  test_samples.py
utils/: IMPIC.md  IMPIC.py  __init__.py  augmentation.py  backend.py  detector.py  filterbank.py  loader.py  nms.py  psrfits.py  spectra.py  transform.py  waterfaller_zhang.py  waterfaller_zhang_origin.py
